resolved overlapping headers on headline section

--- a/style.css
+++ b/style.css
@@ -505,7 +505,7 @@ ul{
     .primary-text{
         width: 566px;
         height: 160px;
-        padding-bottom: 0px;
+        margin-bottom: 50px;
     }
     .supporting-text{
         width: 566px;
